# jamplay

./: .gitignore  README.md  config.py  main.py  open_port.sh  pyproject.toml  requirements.txt  run.py
app/: __init__.py  routes.py
app/static/css/: main.css
app/static/js/: lang.de.js  main.js
app/templates/: index.html
artists/: fft_artist.py
core/: audio_processor.py  player.py
frontend/static/js/: script.js
frontend/templates/: base.html  index.html
jam_man/: __init__.py  api.py  db.py  queue.py
mappers/: proportional_mapper.py
music/: README.md
tools/: player.py
tools/analysis/: README.md  __init__.py
tools/mapping/: __init__.py  adaptive_line_mapper.py  base_mapper.py  basic_fft_mapper.py  energy_flow_mapper.py  feelgood_mapper.py  flowing_effects_mapper.py  particle_mapper.py  scrolling_mapper.py
tools/visualization/: __init__.py  base_visualizer.py  led_visualizer.py  pygame_visualizer.py
visualizer/: display.py
