[project]
name = "jam-man"
version = "0.1.0"
description = "A library for managing your music at home."
authors = [
    {name = "Jamin",email = "jamin.sk@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-socketio (>=5.5.1,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "yt-dlp (>=2025.1.26,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
