[project]
name = "jamplay"
version = "0.1.0"
description = ""
authors = [
    {name = "Jamin",email = "jamin.sk@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "yt-dlp (>=2025.2.19,<2026.0.0)",
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
